# MpaDeps

./: .gitignore  README.md  build.py  linux-toolchain-download.py  mpadeps.cmake  vcpkg.json
.github/workflows/: build.yml
cmake/: mpa-arm64-linux-toolchain.cmake  mpa-x64-linux-toolchain.cmake
mpadeps/: runtime.py  runtime_android.py  runtime_linux.py  runtime_macos.py  runtime_windows.py  session.py  vcpkg.py
msbuild/: mpadeps.props  mpadeps.targets
tools/zeromq-smoke/: CMakeLists.txt  main.cpp
vcpkg-overlay/ports/boost-asio/: portfile.cmake  windows_handle_inheritance.patch
vcpkg-overlay/ports/boost-process/: portfile.cmake
vcpkg-overlay/ports/directml-bin/: portfile.cmake
vcpkg-overlay/ports/mpa-fastdeploy/: portfile.cmake  vcpkg.json
vcpkg-overlay/ports/mpa-onnxruntime/: portfile.cmake  vcpkg.json
vcpkg-overlay/ports/vgamepad-bin/: portfile.cmake  vcpkg.json
vcpkg-overlay/ports/wayland/: 001-fix-scanner-path.patch
vcpkg-overlay/ports/zeromq/: eintr-retry.patch
vcpkg-overlay/triplets/: arm64-linux.cmake  mpa-android-library-override.cmake  mpa-arm64-android.cmake  mpa-arm64-linux.cmake  mpa-arm64-osx.cmake  mpa-arm64-windows.cmake  mpa-linux-library-override.cmake  mpa-windows-library-override.cmake  mpa-x64-android.cmake  mpa-x64-linux.cmake  mpa-x64-osx.cmake  mpa-x64-windows.cmake  x64-linux.cmake
